# DE-airport-project

./: .gitignore  Dockerfile.airflow  Dockerfile.flink  Dockerfile.publisher  Makefile  README.md  docker-compose.yml  flink-config.yaml  main.py  pyproject.flink.toml  pyproject.toml
dashboards/looker/: README.md
docker/: docker-compose.yml
docs/: architecture.md  arrivals.csv  raw_arrivals_events.jsonl
infra/terraform/: README.md
infra/terraform/environments/dev/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcs/: main.tf  variables.tf
ingestion/: README.md  models.py  producer.py  publisher.py
orchestration/: README.md
orchestration/dags/: krk_pipeline_dag.py
orchestration/dbt_profiles/: .user.yml  profiles.yml
streaming/: consumer.py
streaming/flink-jobs/: README.md
streaming/flink-jobs/src/: write_to_gcs_job.py
warehouse/bigquery/: README.md
warehouse/dbt/: README.md
warehouse/dbt/krk_flights_dbt/: dbt_project.yml
warehouse/dbt/krk_flights_dbt/models/: schema.yml  sources.yml
warehouse/dbt/krk_flights_dbt/models/marts/: mart_delay_distribution.sql  mart_delay_trend.sql  mart_recent_arrivals.sql
warehouse/dbt/krk_flights_dbt/models/staging/: stg_raw_arrivals_events.sql
