[project]
name = "de-airport-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka>=1.3.5",
    "kafka-python>=2.3.0",
    "pandas>=3.0.1",
    "pemja>=0.6.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dbt-bigquery>=1.11.1",
]
